<?xml version="1.0"?>
<package>
  <name>roars</name>
  <version>0.0.0</version>
  <description>The roars package</description>

  <maintainer email="d.degregorio@unibo.it">daniele de gregorio</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


  <export>
  </export>
</package>
